--- a/app/src/main/res/layout/fragment_face_tracking.xml
+++ b/app/src/main/res/layout/fragment_face_tracking.xml
@@ -50,6 +50,8 @@
             android:layout_height="289dp"
             android:layout_marginEnd="72dp"
             android:layout_marginBottom="44dp"
+            app:cameraAudio="off"
+            app:cameraFacing="front"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
