--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- todo: Create Drawable for Splash Screen -->
-    <!-- Drawable - backgroundColor, and Item with Logo bitmap -->
-
-    <!-- item drawable - ???   -->
-    <!-- <item> bitmap - logo</item> -->
+    <item android:drawable="@color/colorPrimaryDark"/>
+    <item>
+        <bitmap android:src="@drawable/sbis_icon"/>
+    </item>
 
 </layer-list>
