--- a/app/src/main/res/layout/fragment_face_tracking.xml
+++ b/app/src/main/res/layout/fragment_face_tracking.xml
@@ -61,6 +61,12 @@
 
         </com.otaliastudios.cameraview.CameraView>
 
+        <ru.tzhack.facegame.facetraking.view.FaceContourRender
+            android:id="@+id/face_overlay_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
